# preprint-fulltext

./: .gitignore  AGENTS.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.zh.md  README.zht.md  llms.txt  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.cursor/rules/: preprint-fulltext.mdc
.github/: copilot-instructions.md
.github/workflows/: live-smoke.yml  publish-pypi.yml  publish-registry.yml  test.yml
preprint_fulltext/: __init__.py  cli.py  config.py  mcp_server.py
preprint_fulltext/core/: assemble.py  cache.py  chunk.py  http.py  ids.py  jats.py  licenses.py  models.py
preprint_fulltext/pipeline/: __init__.py  export.py  ingest.py  resolve.py  router.py
preprint_fulltext/sources/: __init__.py  arxiv.py  arxiv_html.py  base.py  biorxiv_api.py  biorxiv_html.py  biorxiv_s3.py  europepmc.py  openalex.py
scripts/: build_agent_docs.py
skills/preprint-fulltext/: SKILL.md
tests/: conftest.py  factories.py  test_arxiv.py  test_assemble.py  test_biorxiv_api.py  test_biorxiv_html.py  test_biorxiv_s3.py  test_chunk.py  test_cli_discover_search.py  test_cli_get.py  test_cli_ingest.py  test_config.py  test_europepmc.py  test_export.py  test_ids.py  test_ingest.py  test_jats.py  test_licenses.py  test_live.py  test_mcp.py  test_models.py  test_openalex.py  test_router.py
tests/fixtures/: arxiv_api.xml  arxiv_latexml.html  biorxiv_details.json  biorxiv_page.html  epmc_resolve.json  epmc_search_page1.json  epmc_search_page2.json  jats_biorxiv_arr.xml  jats_biorxiv_sample.xml  openalex_search.json  openalex_work.json
